Hot fix in CSS to remove white space on bottom ofmusic carousel items.

--- a/sites/all/themes/precipice/css/precipice-alpha-default-normal.css
+++ b/sites/all/themes/precipice/css/precipice-alpha-default-normal.css
@@ -1198,6 +1198,10 @@ section.block-kids-teen-reviews-block-3 .views-field-field-rate-it, section.bloc
 	padding-bottom: 34px;
 }
 
+#block-views-carousel-books-block-9 .jcarousel-skin-default .jcarousel-item {
+    height: 80px;
+}
+
 .block-f5adb2600b17641aa6f949ce888b41eb h2 {
 	padding-bottom: 15px;
 }
